--- a/index.html
+++ b/index.html
@@ -8,6 +8,37 @@
 		<link rel="stylesheet" href="css/main.css">
 	</head>
 	<body>
+		<div class="container">
+			<div class="basic-slider">
+				<div class="basic-slider__wrapper">
+						<img src="" alt="">
+				</div>
+				<div class="basic-slider__wrapper">
+						<img src="" alt="">
+				</div>
+				<div class="basic-slider__wrapper">
+						<img src="" alt="">
+				</div>
+				<div class="basic-slider__wrapper">
+						<img src="" alt="">
+				</div>
+				<div class="basic-slider__wrapper">
+						<img src="" alt="">
+				</div>
+				<div class="basic-slider__wrapper">
+						<img src="" alt="">
+				</div>
+				<div class="basic-slider__wrapper">
+						<img src="" alt="">
+				</div>
+				<div class="basic-slider__wrapper">
+						<img src="" alt="">
+				</div>
+				<div class="basic-slider__wrapper">
+						<img src="" alt="">
+				</div>
+			</div> 
+		</div>
 		<script src="js/main.js"></script>
 	</body>
 </html>
