MST/Changed html layout to basic slider item

--- a/index.html
+++ b/index.html
@@ -10,32 +10,34 @@
 	<body>
 		<div class="container">
 			<div class="basic-slider">
-				<div class="basic-slider__wrapper">
-						<img src="" alt="">
-				</div>
-				<div class="basic-slider__wrapper">
-						<img src="" alt="">
-				</div>
-				<div class="basic-slider__wrapper">
-						<img src="" alt="">
-				</div>
-				<div class="basic-slider__wrapper">
-						<img src="" alt="">
-				</div>
-				<div class="basic-slider__wrapper">
-						<img src="" alt="">
-				</div>
-				<div class="basic-slider__wrapper">
-						<img src="" alt="">
-				</div>
-				<div class="basic-slider__wrapper">
-						<img src="" alt="">
-				</div>
-				<div class="basic-slider__wrapper">
-						<img src="" alt="">
-				</div>
-				<div class="basic-slider__wrapper">
-						<img src="" alt="">
+				<div class="basic-slidedr_wrapper">
+					<div class="basic-slider__item">
+							<img src="" alt="">
+					</div>
+					<div class="basic-slider__item">
+							<img src="" alt="">
+					</div>
+					<div class="basic-slider__item">
+							<img src="" alt="">
+					</div>
+					<div class="basic-slider__item">
+							<img src="" alt="">
+					</div>
+					<div class="basic-slider__item">
+							<img src="" alt="">
+					</div>
+					<div class="basic-slider__item">
+							<img src="" alt="">
+					</div>
+					<div class="basic-slider__item">
+							<img src="" alt="">
+					</div>
+					<div class="basic-slider__item">
+							<img src="" alt="">
+					</div>
+					<div class="basic-slider__item">
+							<img src="" alt="">
+					</div>
 				</div>
 			</div> 
 		</div>
