MST/Optimized html sructure

--- a/index.html
+++ b/index.html
@@ -9,35 +9,44 @@
 	</head>
 	<body>
 		<div class="container">
-			<div class="basic-slider">
-				<div class="basic-slidedr_wrapper">
-					<div class="basic-slider__item">
+			<div class="slider">
+				<div class="slider-wrapper">
+					<div class="slider__item">
 							<img src="" alt="">
 					</div>
-					<div class="basic-slider__item">
+					<div class="slider__item">
 							<img src="" alt="">
 					</div>
-					<div class="basic-slider__item">
+					<div class="slider__item">
 							<img src="" alt="">
 					</div>
-					<div class="basic-slider__item">
+					<div class="slider__item">
 							<img src="" alt="">
 					</div>
-					<div class="basic-slider__item">
+					<div class="slider__item">
 							<img src="" alt="">
 					</div>
-					<div class="basic-slider__item">
+					<div class="slider__item">
 							<img src="" alt="">
 					</div>
-					<div class="basic-slider__item">
+					<div class="slider__item">
 							<img src="" alt="">
 					</div>
-					<div class="basic-slider__item">
+					<div class="slider__item">
 							<img src="" alt="">
 					</div>
-					<div class="basic-slider__item">
+					<div class="slider__item">
 							<img src="" alt="">
 					</div>
+				</div>
+				<div class="slider__nav">
+					<div class="slider-prev">prev</div>
+					<div class="slider-next">next</div>
+				</div>
+				<div class="slider__dots">
+					<div class="slider__dot active"><span></span></div>
+					<div class="slider__dot"><span></span></div>
+					<div class="slider__dot"><span></span></div>
 				</div>
 			</div> 
 		</div>
