MST/Added the first img

--- a/basic_slider(page)/index.html
+++ b/basic_slider(page)/index.html
@@ -12,7 +12,7 @@
 			<div class="slider">
 				<div class="slider-wrapper">
 					<div class="slider__item">
-						<img src="" alt="">
+						<img src="img/slider_img_1.png" alt="">
 					</div>
 					<div class="slider__item">
 							<img src="" alt="">
