MST/Added the second img

--- a/basic_slider(page)/index.html
+++ b/basic_slider(page)/index.html
@@ -15,7 +15,7 @@
 						<img src="img/slider_img_1.png" alt="">
 					</div>
 					<div class="slider__item">
-							<img src="" alt="">
+							<img src="/img/slider_img_2.png" alt="">
 					</div>
 					<div class="slider__item">
 							<img src="" alt="">
