MST/Added remaining images

--- a/basic_slider(page)/index.html
+++ b/basic_slider(page)/index.html
@@ -15,28 +15,28 @@
 						<img src="img/slider_img_1.png" alt="">
 					</div>
 					<div class="slider__item">
-							<img src="/img/slider_img_2.png" alt="">
+						<img src="img/slider_img_2.png" alt="">
 					</div>
 					<div class="slider__item">
-							<img src="" alt="">
+						<img src="img/slider_img_3.png" alt="">
 					</div>
 					<div class="slider__item">
-							<img src="" alt="">
+						<img src="img/slider_img_4.png" alt="">
 					</div>
 					<div class="slider__item">
-							<img src="" alt="">
+						<img src="img/slider_img_5.png" alt="">
 					</div>
 					<div class="slider__item">
-							<img src="" alt="">
+						<img src="img/slider_img_6.png" alt="">
 					</div>
 					<div class="slider__item">
-							<img src="" alt="">
+						<img src="img/slider_img_7.png" alt="">
 					</div>
 					<div class="slider__item">
-							<img src="" alt="">
+						<img src="img/slider_img_8.png" alt="">
 					</div>
 					<div class="slider__item">
-							<img src="" alt="">
+						<img src="img/slider_img_9.png" alt="">
 					</div>
 				</div>
 				<div class="slider__nav">
