--- a/index.html
+++ b/index.html
@@ -12,31 +12,31 @@
 			<div class="slider">
 				<div class="slider-wrapper">
 					<div class="slider__item">
-							<img src="" alt="">
+						<img src="img/slider_img_1.png" alt="">
 					</div>
 					<div class="slider__item">
-							<img src="" alt="">
+						<img src="img/slider_img_2.png" alt="">
 					</div>
 					<div class="slider__item">
-							<img src="" alt="">
+						<img src="img/slider_img_3.png" alt="">
 					</div>
 					<div class="slider__item">
-							<img src="" alt="">
+						<img src="img/slider_img_4.png" alt="">
 					</div>
 					<div class="slider__item">
-							<img src="" alt="">
+						<img src="img/slider_img_5.png" alt="">
 					</div>
 					<div class="slider__item">
-							<img src="" alt="">
+						<img src="img/slider_img_6.png" alt="">
 					</div>
 					<div class="slider__item">
-							<img src="" alt="">
+						<img src="img/slider_img_7.png" alt="">
 					</div>
 					<div class="slider__item">
-							<img src="" alt="">
+						<img src="img/slider_img_8.png" alt="">
 					</div>
 					<div class="slider__item">
-							<img src="" alt="">
+						<img src="img/slider_img_9.png" alt="">
 					</div>
 				</div>
 				<div class="slider__nav">
