SLD/Stylized .slider__dot active

--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
 					<div class="slider-next">next</div>
 				</div>
 				<div class="slider__dots">
-					<div class="slider__dot active"><span></span></div>
-					<div class="slider__dot"><span></span></div>
-					<div class="slider__dot"><span></span></div>
+					<div class="slider__dot active"></div>
+					<div class="slider__dot"></div>
+					<div class="slider__dot"></div>
 				</div>
 			</div> 
 		</div>
