SLD/Changed type html elements in sider-nav parent

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 					</div>
 				</div>
 				<div class="slider__nav">
-					<div class="slider-prev">prev</div>
-					<div class="slider-next">next</div>
+					<button class="slider-prev">Prev</button>
+					<button class="slider-next">Next</button>
 				</div>
 				<div class="slider__dots">
 					<div class="slider__dot active"></div>
