SLD/Edited dots type as button

--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
 					<button class="slider-next">Next</button>
 				</div>
 				<div class="slider__dots">
-					<div class="slider__dot active"></div>
-					<div class="slider__dot"></div>
-					<div class="slider__dot"></div>
+					<button class="slider__dot active"></button>
+					<button class="slider__dot"></button>
+					<button class="slider__dot"></button>
 				</div>
 			</div> 
 		</div>
