--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
 						<img src="img/slider_img_9.png" alt="">
 					</div>
 				</div>
-				<div class="slider__nav">
+				<div class="slider-nav">
 					<button class="slider-prev">Prev</button>
 					<button class="slider-next">Next</button>
 				</div>
-				<div class="slider__dots">
-					<button class="slider__dot active"></button>
-					<button class="slider__dot"></button>
-					<button class="slider__dot"></button>
+				<div class="slider-dots">
+					<button class="slider-dot active"></button>
+					<button class="slider-dot"></button>
+					<button class="slider-dot"></button>
 				</div>
 			</div> 
 		</div>
