--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	</head>
 	<body>
 		<div class="container">
+			<h1 class="title">Simple slider</h1>
 			<div class="slider">
 				<div class="slider-wrapper">
 					<div class="slider__item">
