--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Simple slider</title>
 		<link rel="stylesheet" href="css/main.css">
+		<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400&display=swap" rel="stylesheet">
 	</head>
 	<body>
 		<div class="container">
