SLD/Add id to nav button

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 					</div>
 				</div>
 				<div class="slider-nav">
-					<button class="slider-prev">Prev</button>
-					<button class="slider-next">Next</button>
+					<button class="slider-prev" id="btnL">Prev</button>
+					<button class="slider-next" id="btnR">Next</button>
 				</div>
 				<div class="slider-dots">
 					<button class="slider-dot active"></button>
