SLD/JS/Removed clases name from button

--- a/index.html
+++ b/index.html
@@ -43,8 +43,9 @@
 				</div>
 			</div>
 			<div class="slider-nav">
-				<button class="slider-prev" id="btnL">Prev</button>
-				<button class="slider-next" id="btnR">Next</button>
+				<!--Removed classes slider-prev & slider-next -->
+				<button id="btnL">Prev</button>
+				<button id="btnR">Next</button>
 			</div>
 			<div class="slider-dots">
 				<button class="slider-dot active"></button>
