SLD/JS/Removed clases name from button

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 				</div>
 			</div>
 			<div class="slider-nav">
-				<!--Removed classes slider-prev & slider-next -->
+				<!--Removed classes .slider-prev & .slider-next -->
 				<button id="btnL">Prev</button>
 				<button id="btnR">Next</button>
 			</div>
