JS/Ids were create for slider dot buttons

--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
 				<button id="btnR">Next</button>
 			</div>
 			<div class="slider-dots">
-				<button class="slider-dot active"></button>
-				<button class="slider-dot"></button>
-				<button class="slider-dot"></button>
+				<button class="slider-dot" id="dotL"></button>
+				<button class="slider-dot" id="dotC"></button>
+				<button class="slider-dot" id="dotR"></button>
 			</div>
 		</div>
 		<script src="js/main.js"></script>
