Return class active for center dot button

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 			</div>
 			<div class="slider-dots">
 				<button class="slider-dot" id="dotL"></button>
-				<button class="slider-dot" id="dotC"></button>
+				<button class="slider-dot active" id="dotC"></button>
 				<button class="slider-dot" id="dotR"></button>
 			</div>
 		</div>
