JS/Added handler to centr dot button

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 				<button id="btnR">Next</button>
 			</div>
 			<div class="slider-dots">
-				<button class="slider-dot" id="dotL"></button>
-				<button class="slider-dot active" id="dotC"></button>
+				<button class="slider-dot active" id="dotL"></button>
+				<button class="slider-dot" id="dotC"></button>
 				<button class="slider-dot" id="dotR"></button>
 			</div>
 		</div>
