JS/First dot button initialized with delay

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 				<button id="btnR">Next</button>
 			</div>
 			<div class="slider-dots">
-				<button class="active" id="dotL"></button>
+				<button id="dotL"></button>
 				<button id="dotC"></button>
 				<button id="dotR"></button>
 			</div>
